infrastructure/kubernetes/microservice/payment-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      nodeSelector:
        kubernetes.io/hostname: my-dev-cluster-worker2
      containers:
        - name: payment-service
          # Đổi tên image theo tài khoản docker hub của bạn cho đồng bộ
          image: huynhnhub2204958/payment-service:latest 
          imagePullPolicy: Always # Ưu tiên lấy ảnh local nếu có, đỡ phải push lên Hub

          ports:
            - containerPort: 3002
